# pocketbook-coolreader

./: .gitignore  CMakeLists.txt  README.TXT  README.md  make.sh  makepb360.sh  makepball.sh  makepbpro.sh  makepbpro4.sh  makepbpro5.sh  publish.sh  remake.sh  remakeThemes.sh  updateReleases.sh
builds/: current.version
builds/602/: 602
builds/links/: 626
cr3gui/: CMakeLists.txt
cr3gui/data/: fb2.css
cr3gui/po/: LINGUAS  POTFILES.in  cr3.pot  cr3_bg.po  cr3_ca.po  cr3_cs.po  cr3_de.po  cr3_es.po  cr3_et.po  cr3_fr.po  cr3_he.po  cr3_hu.po  cr3_it.po  cr3_lt.po  cr3_nl.po  cr3_pl.po  cr3_pt.po  cr3_ro.po  cr3_ru.po  cr3_tr.po  cr3_uk.po  cr3_zh.po  cr3_zh_CN.po  cr3_zh_TW.po  update-po
cr3gui/src/: bmkdlg.cpp  citedlg.cpp  cr3main.cpp  cr3main.h  cr3pocketbook.cpp  cr3pocketbook.h  dictdlg.cpp  linksdlg.cpp  linksdlg.h  mainwnd.cpp  mainwnd.h  ota_update.cpp  ota_update.h  pb_toc.cpp  pb_toc.h  readingStats.cpp  readingStats.h  recentdlg.cpp  settings.cpp  (+10 more)
crengine/: CMakeLists.txt
crengine/Tools/GammaGen/: gammagen.cpp
crengine/include/: crgui.h  cri18n.h  crlocks.h  crsetup.h  crskin.h  gammatbl.h  lvdocview.h  lvdocviewcmd.h  lvdocviewprops.h  lvfntman.h  lvtextfm.h  lvtinydom.h  props.h
crengine/src/: chmfmt.cpp  crgui.cpp  crskin.cpp  hist.cpp  lvdocview.cpp  lvdrawbuf.cpp  lvfntman.cpp  lvrend.cpp  lvstyles.cpp  lvtextfm.cpp  lvtinydom.cpp  props.cpp
tools/: FindGettext.cmake  KWWidgetsInternationalizationMacros.cmake  toolchain-arm-gnu-eabi-pocketbook.cmake  toolchain-arm-obreey-linux-gnueabi-pocketbook.cmake  toolchain-arm-pocketbook.cmake
(+83 files in other folders)
